--- a/Topic6/format.ipynb
+++ b/Topic6/format.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -167,14 +167,14 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# write a function named number_Days_between that takes in two arguments that are 8 digit integers of the form YYYYMMDD representing two dates. The function should return the number of days between the two dates.\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m number_Days_between(\u001b[38;5;241m20200919\u001b[39m, \u001b[38;5;241m20200920\u001b[39m) \u001b[38;5;66;03m# 2\u001b[39;00m\n\u001b[0;32m      4\u001b[0m number_Days_between(\u001b[38;5;241m20200920\u001b[39m, \u001b[38;5;241m20200919\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# write a function named number_Days_between that takes in two arguments that are 8 digit integers of the form YYYYMMDD representing two dates. The function should return the number of days between the two dates.\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m number_Days_between(\u001b[38;5;241m20200919\u001b[39m, \u001b[38;5;241m20200919\u001b[39m) \u001b[38;5;66;03m# 0\u001b[39;00m\n\u001b[0;32m      3\u001b[0m number_Days_between(\u001b[38;5;241m20200919\u001b[39m, \u001b[38;5;241m20200920\u001b[39m) \u001b[38;5;66;03m# 2\u001b[39;00m\n\u001b[0;32m      4\u001b[0m number_Days_between(\u001b[38;5;241m20200920\u001b[39m, \u001b[38;5;241m20200919\u001b[39m)\n",
       "\u001b[1;31mNameError\u001b[0m: name 'number_Days_between' is not defined"
      ]
     }
    ],
    "source": [
     "# write a function named number_Days_between that takes in two arguments that are 8 digit integers of the form YYYYMMDD representing two dates. The function should return the number of days between the two dates.\n",
-    "\n",
+    "number_Days_between(20200919, 20200919) # 0\n",
     "number_Days_between(20200919, 20200920) # 2\n",
     "number_Days_between(20200920, 20200919) # 3773"
    ]
